# blackhole-cli

./: .gitignore  DISCLAIMER.md  License.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
assets/: banner.py
blackhole_cli/: main.py
commands/: files.py  network.py  system.py
core/: cli.py  parser.py  registery.py  router.py
core_commands/: version.py  void.py
utils/: animations.py  colors.py  ui.py
